# online_platform_electronics_shop

./: pyproject.toml
app_factory/: apps.py  models.py
app_individual/: apps.py
app_retail/: apps.py
config/: settings.py  urls.py
users/: models.py  serializers.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
